syntax = "proto3";

package hala.pprof;

/// representing the resolution of a symbol in a file.
message Symbol {
    /// Function display name
    string name = 1;
    /// function start address.
    uint64 address = 2;
    /// The file name where this function was defined.
    string file_name = 3;
    /// The line number for where this symbol is currently executing.
    uint32 line_no = 4;
    /// The column number for where this symbol is currently executing.
    uint32  col_no = 5;
}

/// representing allocated memeory metadata and alloc backtrace frames.
message HeapBacktrace {
    /// memory block allocated.  
    uint64 address = 1;
    /// memory block max length.
    uint64 size = 2;
    /// Frame symbols here are listed from top-to-bottom of the stack
    repeated uint64 frame_symbols = 3;
}